[metadata]
name = gio
version = attr: gio.__version__
author = Agile Scientific
author_email = hello@agilescientific.com
description = Create xarray.DataArrays from various subsurface data formats.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/agilescientific/gio
classifiers =
    Intended Audience :: Science/Research
    Development Status :: 3 - Alpha
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = gio
python_requires = >=3.8
install_requires =
    scipy
    xarray
    shapely
    zmapio

[options.extras_require]
test = pytest; pytest-cov; matplotlib
docs = sphinx; sphinxcontrib-apidoc; myst_nb; furo; matplotlib
dev = build; pytest; pytest-cov; sphinx; sphinxcontrib-apidoc; myst_nb; furo; matplotlib
geopandas = geopandas
